fixed footer on firefox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,11 +5,16 @@
   --kinda-white: #f5f5f5;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   background:gray;
   background-image: url(../images/bgtest.jpg);
   background-size: cover;
-  min-height: 100%;
+  height: 100%;
   color: white;
 }
 
@@ -89,6 +94,7 @@ footer {
   background-color: var(--secondary-color);
   position: sticky;
   top: 100%;
+  bottom: 0;
   width: 100%;
   height: 60px;
   line-height: 60px;
